--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": ""
   },
   "dependencies": {
+    "@azure/cosmos": "^3.6.2",
+    "bluebird": "^3.7.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -14,6 +16,7 @@
     "morgan": "~1.9.0",
     "node-datetime": "^2.1.2",
     "nodemon": "^2.0.2",
+    "redis": "^3.0.2",
     "uuid": "^7.0.2",
     "uuid-by-string": "^3.0.2"
   }
